// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` menu with alias item in list 1`] = `
<div
  class="v-input c-select-field v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-autocomplete c-select-field--ellipsis"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Search by
        </label>
        <div
          class="v-select__selections"
        >
          <!---->
          <span>
            Component
          </span>
          <input
            autocomplete="off"
            name="alias_attribute_menu"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="alias_attribute_menu"
          type="hidden"
          value="v.component"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` menu with alias item in list 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      role="option"
      tabindex="0"
    >
      <span>
        Component
      </span>
      <!---->
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <span>
        Infos
      </span>
      <c-simple-tooltip-stub
        content="infos.infos.value"
        offset-y=""
        top=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate ml-1 material-icons theme--light primary--text"
          style="font-size: 16px;"
        >
          alternate_email
        </i>
      </c-simple-tooltip-stub>
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` menu with alias item selected 1`] = `
<div
  class="v-input c-select-field v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select v-autocomplete c-select-field--ellipsis"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Search by
        </label>
        <div
          class="v-select__selections"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate mr-1 material-icons theme--light"
            style="font-size: 16px;"
          >
            alternate_email
          </i>
          <span>
            Infos
          </span>
          <input
            autocomplete="off"
            name="alias_attribute"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="alias_attribute"
          type="hidden"
          value="v.infos"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` menu with alias item selected 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <span>
        Component
      </span>
      <!---->
    </div>
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      role="option"
      tabindex="0"
    >
      <span>
        Infos
      </span>
      <c-simple-tooltip-stub
        content="infos.infos.value"
        offset-y=""
        top=""
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate ml-1 material-icons theme--light primary--text"
          style="font-size: 16px;"
        >
          alternate_email
        </i>
      </c-simple-tooltip-stub>
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` with custom props 1`] = `
<div
  class="v-input c-select-field v-input--is-disabled theme--light v-text-field v-select v-autocomplete c-select-field--ellipsis"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            disabled="disabled"
            name="custom_filter_attribute_name"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-icon--disabled material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="custom_filter_attribute_name"
          type="hidden"
          value="[object Object]"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <span>
        Ack at
      </span>
      <!---->
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` with default props 1`] = `
<div
  class="v-input c-select-field v-input--is-focused theme--light v-text-field v-select v-select--is-menu-active v-autocomplete primary--text c-select-field--ellipsis"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light primary--text"
          style="left: 0px; position: absolute;"
        >
          Search by
        </label>
        <div
          class="v-select__selections"
        >
          <input
            autocomplete="off"
            name="attribute"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="attribute"
          type="hidden"
          value="[object Object]"
        />
      </div>
      <div
        class="v-menu"
      />
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light primary--text"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`pattern-attribute-field Renders \`pattern-attribute-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active v-autocomplete__content"
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      class="v-list-item theme--light"
      tabindex="-1"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          No data available
        </div>
      </div>
    </div>
  </div>
</div>
`;
